--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
@@ -11,8 +13,11 @@
   "type": "module",
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "node-fetch": "^3.3.2",
-    "firebase": "^11.1.0"
+    "firebase": "^11.1.0",
+    "marked": "^15.0.6",
+    "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "vite": "^6.0.7"
   }
 }
-
