--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "marked": "^15.0.6",
     "node-fetch": "^3.3.2"
   },
