--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@vercel/blob": "^0.27.1",
     "bootstrap": "^5.3.3",
     "firebase": "^11.1.0",
