--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "@vercel/blob": "^0.27.2",
+    "@xenova/transformers": "^2.17.2",
     "bootstrap": "^5.3.3",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
+    "huggingface": "^1.4.0",
     "marked": "^15.0.6",
     "node-fetch": "^3.3.2"
   },
